[project]
name = "dataset-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "langchain-google-genai",
    "langchain",
    "langchain-core",
    "python-dotenv",
    "openpyxl",
    "openai",
    "groq",
]

[tool.setuptools.packages.find]
include = ["dataset_analyzer", "tools"]

